# claims-copilot

./: .gitignore  README.md  pyproject.toml  terminal_output_extraction.txt
data/: claim_documents.csv  claim_events.csv  claim_labels.csv  claims.csv  policies.csv  policyholders.csv  vehicles.csv
data/extractions/: eval_results.json  extractions.json
docs/: system-overview.md
docs/examples/: evaluation-summary.json  sample-claim-input.md  sample-claim-output.json
scripts/: generate_claims.py  run_extraction.py  train_models.py
sql/: schema.sql
src/api/: __init__.py  app.py  repository.py  schemas.py  services.py
src/data/: constants.py  descriptions.py  events.py  generator.py  io.py  templates.py
src/extraction/: dataset.py  evaluation.py  pipeline.py  schemaspy.py
src/models/: features.py  training.py
src/serving/: next_best_action.py
src/ui/: __init__.py  app.py  components.py  constants.py  data.py  logic.py  persistence.py
tests/: test_analysis_service.py  test_api_app.py  test_evaluation.py  test_generator_invariants.py  test_next_best_action.py  test_pipeline_parsing.py  test_predictor_artifacts.py  test_run_extraction_smoke.py  test_training_feature_importance.py  test_ui_logic.py  test_ui_persistence.py
